# picocalc-rust-template

./: Cargo.toml  README.md  memory.x
.cargo/: config.toml
helpers/: key_codes.py  key_codes_match.py
payloads/: s1.tar  s2.tar  s3.tar
payloads/s1/: meta-data.txt  payload.txt  payload.txt.2
payloads/s2/: meta-data.txt  payload.txt
payloads/s3/: meta-data.txt  payload.txt
src/: key_codes.rs  main.rs
